.metadata/.plugins/org.eclipse.cdt.ui/findDot.build.log
11:21:09 **** Build of configuration Debug for project findDot ****
make all 
Building file: ../src/findDot.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/findDot.d" -MT"src/findDot.o" -o "src/findDot.o" "../src/findDot.cpp"
../src/findDot.cpp:13:42: error: non-member function cannot have 'const' qualifier
int findDot(const vector<char> &charvec) const{
                                         ^~~~~
../src/findDot.cpp:15:23: error: non-ASCII characters are not allowed outside of literals and identifiers
        while (charvec[i] != ‘.’){
                             ^
../src/findDot.cpp:15:26: error: expected expression
        while (charvec[i] != ‘.’){
                              ^
../src/findDot.cpp:15:27: error: non-ASCII characters are not allowed outside of literals and identifiers
        while (charvec[i] != ‘.’){
                               ^
4 errors generated.
make: *** [src/findDot.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

11:21:10 Build Failed. 5 errors, 0 warnings. (took 572ms)

